--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -418,16 +418,26 @@
 		interrupt-parent = <&gic>;
 	};
 
-	msdc0: msdc@11F60000 {
+	msdc0: msdc@11f60000 {
 		compatible = "mediatek,msdc";
-		reg = <0 0x11F60000 0 0x10000>;
+		reg = <0 0x11f60000 0 0x10000>;
 		interrupts = <GIC_SPI 99 IRQ_TYPE_LEVEL_HIGH>;
 	};
 
-	msdc1: msdc@11F70000{
+	msdc1: msdc@11f70000{
 		compatible = "mediatek,msdc";
-		reg = <0 0x11F70000 0 0x1000>;
+		reg = <0 0x11f70000 0 0x1000>;
 		interrupts = <GIC_SPI 103 IRQ_TYPE_LEVEL_HIGH>;
+	};
+
+	msdc0_top@11f50000{
+		compatible = "mediatek,msdc0_top";
+		reg = <0 0x11f50000 0 0x1000>;
+	};
+
+	msdc1_top@11c70000{
+		compatible = "mediatek,msdc1_top";
+		reg = <0 0x11c70000 0 0x1000>;
 	};
 
 	sleep@10006000 {
