--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -55,100 +55,96 @@
 			enable-method = "psci";
 			clock-frequency = <1701000000>;
 		};
-/*
- *		cpu1: cpu@001 {
- *			device_type = "cpu";
- *			compatible = "arm,cortex-a55";
- *			reg = <0x0100>;
- *			enable-method = "psci";
- *			clock-frequency = <1701000000>;
- *		};
- *
- *		cpu2: cpu@002 {
- *			device_type = "cpu";
- *			compatible = "arm,cortex-a55";
- *			reg = <0x0200>;
- *			enable-method = "psci";
- *			clock-frequency = <1701000000>
- *		};
- *
- *		cpu3: cpu@003 {
- *			device_type = "cpu";
- *			compatible = "arm,cortex-a55";
- *			reg = <0x0300>;
- *			enable-method = "psci";
- *			clock-frequency = <1701000000>;
- *		};
- *
- *		cpu4: cpu@100 {
- *			device_type = "cpu";
- *			compatible = "arm,cortex-a75";
- *			reg = <0x0400>;
- *			enable-method = "psci";
- *			clock-frequency = <2171000000>;
- *		};
- *
- *		cpu5: cpu@101 {
- *			device_type = "cpu";
- *			compatible = "arm,cortex-a75";
- *			reg = <0x0500>;
- *			enable-method = "psci";
- *			clock-frequency = <2171000000>;
- *		};
- *
- *		cpu6: cpu@102 {
- *			device_type = "cpu";
- *			compatible = "arm,cortex-a75";
- *			reg = <0x0600>;
- *			enable-method = "psci";
- *			clock-frequency = <2171000000>;
- *		};
- *
- *		cpu7: cpu@103 {
- *			device_type = "cpu";
- *			compatible = "arm,cortex-a75";
- *			reg = <0x0700>;
- *			enable-method = "psci";
- *			clock-frequency = <2171000000>;
- *		};
- */
+
+		cpu1: cpu@001 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a55";
+			reg = <0x0100>;
+			enable-method = "psci";
+			clock-frequency = <1701000000>;
+		};
+
+		cpu2: cpu@002 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a55";
+			reg = <0x0200>;
+			enable-method = "psci";
+			clock-frequency = <1701000000>;
+		};
+
+		cpu3: cpu@003 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a55";
+			reg = <0x0300>;
+			enable-method = "psci";
+			clock-frequency = <1701000000>;
+		};
+
+		cpu4: cpu@100 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a75";
+			reg = <0x0400>;
+			enable-method = "psci";
+			clock-frequency = <2171000000>;
+		};
+
+		cpu5: cpu@101 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a75";
+			reg = <0x0500>;
+			enable-method = "psci";
+			clock-frequency = <2171000000>;
+		};
+
+		cpu6: cpu@102 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a75";
+			reg = <0x0600>;
+			enable-method = "psci";
+			clock-frequency = <2171000000>;
+		};
+
+		cpu7: cpu@103 {
+			device_type = "cpu";
+			compatible = "arm,cortex-a75";
+			reg = <0x0700>;
+			enable-method = "psci";
+			clock-frequency = <2171000000>;
+		};
+
 		cpu-map {
 			cluster0 {
 				core0 {
 					cpu = <&cpu0>;
 				};
-/*
- *				core1 {
- *					cpu = <&cpu1>;
- *				};
- *				core2 {
- *					cpu = <&cpu2>;
- *				};
- *				core3 {
- *					cpu = <&cpu3>;
- *				};
- *				doe_dvfs_cl0: doe {
- *				};
- */
+				core1 {
+					cpu = <&cpu1>;
+				};
+				core2 {
+					cpu = <&cpu2>;
+				};
+				core3 {
+					cpu = <&cpu3>;
+				};
+				doe_dvfs_cl0: doe {
+				};
 			};
 
 			cluster1 {
-/*
- *				core0 {
- *					cpu = <&cpu4>;
- *				};
- *				core1 {
- *					cpu = <&cpu5>;
- *				};
- *				core2 {
- *					cpu = <&cpu6>;
- *				};
- *				core3 {
- *					cpu = <&cpu7>;
- *				};
- *				doe_dvfs_cl1: doe {
- *				};
- */
+				core0 {
+					cpu = <&cpu4>;
+				};
+				core1 {
+					cpu = <&cpu5>;
+				};
+				core2 {
+					cpu = <&cpu6>;
+				};
+				core3 {
+					cpu = <&cpu7>;
+				};
+				doe_dvfs_cl1: doe {
+				};
 			};
 		};
 	};
