--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -149,7 +149,8 @@ CONFIG_MTPROF=y
 CONFIG_MTK_SCHED_MONITOR=y
 CONFIG_MTK_WQ_DEBUG=y
 CONFIG_ANDROID_DEFAULT_SETTING=y
-CONFIG_MTK_GPU_VERSION="mali valhall r20p0"
+CONFIG_MTK_GPU_SUPPORT=y
+CONFIG_MTK_GPU_VERSION="mali valhall r21p0"
 CONFIG_MTK_VIBRATOR=y
 CONFIG_MTK_SYNC=y
 CONFIG_MTK_DRAM_LOG_STORE=y
