--- a/arch/arm64/configs/k6873v1_64_debug_defconfig
+++ b/arch/arm64/configs/k6873v1_64_debug_defconfig
@@ -178,6 +178,9 @@ CONFIG_PPP_ASYNC=y
 CONFIG_PPP_SYNC_TTY=y
 CONFIG_INPUT_EVDEV=y
 CONFIG_KEYBOARD_MTK=y
+CONFIG_ONEKEY_REBOOT_NORMAL_MODE=y
+CONFIG_ONEKEY_REBOOT_OTHER_MODE=y
+CONFIG_KPD_PWRKEY_USE_PMIC=y
 # CONFIG_INPUT_MOUSE is not set
 CONFIG_INPUT_TOUCHSCREEN=y
 CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9886 GT9896S"
