--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -4733,7 +4733,10 @@
 	smart_pa: smart_pa {
 	};
 
-	keypad: keypad {
+	keypad: kp@10010000 {
+		compatible = "mediatek,kp";
+		reg = <0 0x10010000 0 0x1000>;
+		interrupts = <GIC_SPI 74 IRQ_TYPE_EDGE_RISING>;
 	};
 };
 
