--- a/arch/arm64/boot/dts/mediatek/mt6873.dts
+++ b/arch/arm64/boot/dts/mediatek/mt6873.dts
@@ -175,7 +175,11 @@
 		ion-carveout-heap {
 			compatible = "mediatek,ion-carveout-heap";
 			no-map;
-			size = <0 0x100000>;
+#ifdef CONFIG_FPGA_EARLY_PORTING
+			size = <0 0x10000000>;
+#else
+			size = <0 0xc000>;
+#endif
 			alignment = <0 0x1000>;
 			alloc-ranges = <0 0x40000000 0 0x80000000>;
 		};
