--- a/arch/arm64/configs/k6893v1_64_defconfig
+++ b/arch/arm64/configs/k6893v1_64_defconfig
@@ -1,4 +1,5 @@
 CONFIG_ARCH_MEDIATEK=y
+CONFIG_MTK_CMDQ_MBOX_EXT=m
 CONFIG_MEDIATEK_WATCHDOG=m
 CONFIG_MTK_DEVINFO=m
 CONFIG_COMMON_CLK_MT6893=m
@@ -29,13 +30,19 @@ CONFIG_COMMON_CLK_MT6893_VDECSYS=m
 CONFIG_COMMON_CLK_MT6893_VDECSYS_SOC=m
 CONFIG_COMMON_CLK_MT6893_VENCSYS_C1=m
 CONFIG_COMMON_CLK_MT6893_VENCSYS=m
+CONFIG_MTK_CMDQ=m
 CONFIG_MTK_SCPSYS=m
+CONFIG_DEVAPC_MT6885=m
 CONFIG_SCSI_UFS_MEDIATEK=m
 CONFIG_SCSI_UFS_MEDIATEK_DBG=m
 CONFIG_SERIAL_8250_NR_UARTS=2
 CONFIG_SERIAL_8250_RUNTIME_UARTS=2
 CONFIG_SERIAL_8250_MT6577=m
 CONFIG_MTK_UART_APDMA=m
+CONFIG_MTK_CLK_BUFFER=m
+CONFIG_MTK_CLKBUF_BBLPM=y
+CONFIG_MTK_CLKBUF_NFC=y
+CONFIG_MTK_SRCLKEN_RC=m
 CONFIG_USB_MTU3=m
 CONFIG_PHY_MTK_TPHY=m
 CONFIG_MTK_PMIC_WRAP=m
@@ -43,6 +50,7 @@ CONFIG_MFD_MT6397=m
 CONFIG_REGULATOR_MT6315=m
 CONFIG_REGULATOR_MT6359P=m
 CONFIG_MT635X_EFUSE=m
+CONFIG_MEDIATEK_MT6577_AUXADC=m
 CONFIG_MEDIATEK_MT635X_AUXADC=m
 CONFIG_SPMI_MTK_PMIF=m
 CONFIG_MFD_MTK_SPMI_PMIC=m
@@ -56,5 +64,40 @@ CONFIG_PINCTRL_MT6885=m
 # CONFIG_PINCTRL_MT6397 is not set
 CONFIG_KEYBOARD_MTK_KPD=m
 CONFIG_KEYBOARD_MTK_PMIC=m
+CONFIG_LEDS_PWM=m
 CONFIG_LEDS_REGULATOR_VIBRATOR=m
 CONFIG_I2C_MT65XX=m
+CONFIG_MTK_DVFSRC=m
+CONFIG_REGULATOR_MTK_DVFSRC=m
+CONFIG_INTERCONNECT_MTK=y
+CONFIG_INTERCONNECT_MTK_EMI=m
+CONFIG_MTK_DVFSRC_DEVFREQ=m
+CONFIG_MTK_DVFSRC_HELPER=m
+CONFIG_MTK_DVFSRC_MET_MT6873=m
+CONFIG_SPI_MT65XX=m
+CONFIG_MEDIATEK_MT6360_AUXADC=m
+CONFIG_CHARGER_MT6360=m
+CONFIG_MFD_MT6360=m
+CONFIG_REGULATOR_MT6360=m
+CONFIG_MTK_CHARGER=m
+CONFIG_MTK_PUMP_EXPRESS_PLUS_20_SUPPORT=m
+CONFIG_MTK_PUMP_EXPRESS_PLUS_SUPPORT=m
+CONFIG_MTK_PUMP_EXPRESS_40_SUPPORT=m
+CONFIG_TCPC_CLASS=m
+CONFIG_TCPC_MT6360=m
+CONFIG_USB_POWER_DELIVERY=m
+CONFIG_MTK_CHARGER_TYPE_DETECT=m
+CONFIG_TOUCHSCREEN_MTK_TOUCH="GT9896S"
+CONFIG_RTC_DRV_MT6397=m
+CONFIG_MTK_ION_MM_HEAP=m
+CONFIG_MTK_IOMMU=m
+CONFIG_MTK_IOMMU_MISC=m
+CONFIG_MTK_IOMMU_MISC_DBG=m
+CONFIG_DRM_MEDIATEK=m
+CONFIG_DRM_MEDIATEK_V2=y
+CONFIG_DRM_FBDEV_EMULATION=y
+CONFIG_MMPROFILE=m
+CONFIG_DRM_PANEL_TRULY_TD4330_VDO=m
+CONFIG_DRM_PANEL_TRULY_FT8756_VDO=m
+CONFIG_MTK_GPU_SUPPORT=m
+CONFIG_MTK_GPU_VERSION="mali valhall r25p0 mt6893"
