--- a/arch/arm64/boot/dts/mediatek/mt6893.dtsi
+++ b/arch/arm64/boot/dts/mediatek/mt6893.dtsi
@@ -687,6 +687,133 @@
 		clock-names = "spi", "wrap", "ulposc", "ulposc_osc";
 	};
 
+	thermal_zones: thermal-zones {
+		soc_max {
+			polling-delay = <100>; /* milliseconds */
+			polling-delay-passive = <5>; /* milliseconds */
+			thermal-sensors = <&lvts 0>;
+			sustainable-power = <3000>; /* milliwatts */
+
+			trips {
+				threshold: trip-point@0 {
+					temperature = <55000>;
+					hysteresis = <2000>;
+					type = "passive";
+				};
+				target: trip-point@1 {
+					temperature = <85000>;
+					hysteresis = <2000>;
+					type = "passive";
+				};
+				soc_max_crit: soc_max_crit@0 {
+					temperature = <117000>;
+					hysteresis = <2000>;
+					type = "critical";
+				};
+			};
+
+
+		};
+		cpu_big1 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 1>;
+		};
+		cpu_bigbig {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 2>;
+		};
+		cpu_big2 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 3>;
+		};
+		cpu_big3 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 4>;
+		};
+		cpu_little1 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 5>;
+		};
+		cpu_little2 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 6>;
+		};
+		cpu_little3 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 7>;
+		};
+		cpu_little4 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 8>;
+		};
+		apu {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 9>;
+		};
+		mlda {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 10>;
+		};
+		gpu1 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 11>;
+		};
+		gpu2 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 12>;
+		};
+		infra {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 13>;
+		};
+		camsys {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 14>;
+		};
+		md1 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 15>;
+		};
+		md2{
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 16>;
+		};
+		md3 {
+			polling-delay = <0>; /* milliseconds */
+			polling-delay-passive = <0>; /* milliseconds */
+			thermal-sensors = <&lvts 17>;
+		};
+		consys {
+			polling-delay = <1000>; /* milliseconds */
+			polling-delay-passive = <1000>; /* milliseconds */
+			thermal-sensors = <&consys>;
+
+			trips {
+				consys_crit: consys_crit@0 {
+					temperature = <120000>;
+					hysteresis = <2000>;
+					type = "critical";
+				};
+			};
+		};
+	};
+
 	thermal_ipi: thermal-ipi {
 		compatible = "mediatek,thermal-ipi";
 		target-bitmask = <0x2>; /* MCUPM */
@@ -881,9 +1008,9 @@
 				#reset-cells = <1>;
 
 				ti,reset-bits = <
-					0x120 1 0x124 1 0 0
+					0x120 0 0x124 0 0 0
 					(ASSERT_SET | DEASSERT_SET | STATUS_NONE) /* 0: lvts_ap */
-					0x730 1 0x734 1 0 0
+					0x730 10 0x734 10 0 0
 					(ASSERT_SET | DEASSERT_SET | STATUS_NONE) /* 1: lvts_mcu */
 					>;
 			};
@@ -1851,12 +1978,16 @@
 		};
 
 		lvts: lvts@1100b000 {
-			compatible = "mediatek,mt6873-lvts";
+			compatible = "mediatek,mt6893-lvts";
 			#thermal-sensor-cells = <1>;
 			reg = <0 0x1100b000 0 0x1000>,
 			      <0 0x11278000 0 0x1000>;
 			interrupts = <GIC_SPI 169 IRQ_TYPE_LEVEL_HIGH 0>,
 				<GIC_SPI 170 IRQ_TYPE_LEVEL_HIGH 0>;
+
+			/* TODO: change 10 to CLK_INFRA_THERM after clk.h defined */
+			clocks = <&infracfg_ao_clk 10>;
+			clock-names = "lvts_clk";
 
 			resets = <&infracfg_rst 0>,
 				 <&infracfg_rst 1>;
