--- a/drivers/misc/mediatek/connectivity/Kconfig
+++ b/drivers/misc/mediatek/connectivity/Kconfig
@@ -172,6 +172,14 @@ config MTK_COMBO_CHIP_CONSYS_6873
 	  is
 	  MT6873(BT/WIFI/GPS/FM combo chip)
 
+config MTK_COMBO_CHIP_CONSYS_6893
+	bool "MTK MT6893 combo chip support"
+	help
+	  this config is used to decided SOC consys version
+	  in current platform
+	  is
+	  MT6893(BT/WIFI/GPS/FM combo chip)
+
 endchoice
 
 config MTK_COMBO_CHIP
@@ -194,6 +202,7 @@ config MTK_COMBO_CHIP
 	default "CONSYS_6779" if MTK_COMBO_CHIP_CONSYS_6779
 	default "CONSYS_6853" if MTK_COMBO_CHIP_CONSYS_6853
 	default "CONSYS_6873" if MTK_COMBO_CHIP_CONSYS_6873
+	default "CONSYS_6893" if MTK_COMBO_CHIP_CONSYS_6893
 	help
 	  this feature is used to identify combo chip version or SOC chip
 	  consys version.
